--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,13 @@ include_directories(
 add_executable(${PROJECT_NAME} src/PF_nav.cpp)
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 
-add_executable(${PROJECT_NAME}_Marker src/PF_Marker.cpp)
-target_link_libraries(${PROJECT_NAME}_Marker ${catkin_LIBRARIES})
-
 add_executable(class_tutorial src/class_tutorial.cpp)
 target_link_libraries(class_tutorial ${catkin_LIBRARIES})
 
 add_executable(${PROJECT_NAME}_MarkerArray src/PF_MarkerArray.cpp)
 target_link_libraries(${PROJECT_NAME}_MarkerArray ${catkin_LIBRARIES})
+
+add_executable(${PROJECT_NAME}_Visualization src/PF_Visualization.cpp)
+target_link_libraries(${PROJECT_NAME}_Visualization ${catkin_LIBRARIES})
 
 add_definitions(-std=c++14)
